fix(theme-chalk): :bug: fix sidebar collapse active background-color.

--- a/packages/theme-chalk/src/sidebar.scss
+++ b/packages/theme-chalk/src/sidebar.scss
@@ -32,6 +32,7 @@
 
     .#{$plus-namespace + -sidebar__collapse} {
       width: calc(var(--plus-sidebar-width) - 1px);
+      background-color: getCssVar('menu-bg-color');
       height: var(--plus-sidebar-collapse-height);
       box-sizing: border-box;
       position: absolute;
@@ -42,8 +43,12 @@
       &.is-collapse {
         width: calc(getCssVar('menu-icon-width') + getCssVar('menu-base-level-padding') * 2 - 1px);
       }
+      &.is-active {
+        background-color: getCssVar('menu-bg-color');
+      }
 
       [class*='-icon'] {
+        margin-top: 10px;
         font-size: 20px;
         user-select: none;
         cursor: pointer;
